ProcessoDELL/force-app/main/default/objects/Animais__c/Animais__c.object-meta.xml
<CustomObject>
    <label>Animal</label>
    <nameField>
        <label>Animais Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Animais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>