ProcessoDELL/force-app/main/default/objects/Animais__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Porte grande</fullName>
            </value>
            <value>
                <fullName>Porte médio</fullName>
            </value>
            <value>
                <fullName>Porte pequeno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>