ProcessoDELL/force-app/main/default/objects/Animais__c/fields/Especie__c.field-meta.xml
<CustomField>
    <fullName>Especie__c</fullName>
    <label>Espécie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>