ProcessoDELL/force-app/main/default/objects/Animais__c/fields/Peso__c.field-meta.xml
<CustomField>
    <fullName>Peso__c</fullName>
    <inlineHelpText>Medida usada é quilograma (kg)</inlineHelpText>
    <label>Peso</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>