ProcessoDELL/force-app/main/default/objects/Animais__c/fields/Tamanho__c.field-meta.xml
<CustomField>
    <fullName>Tamanho__c</fullName>
    <inlineHelpText>Medida usada é metros (m)</inlineHelpText>
    <label>Tamanho</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>