ProcessoDELL/force-app/main/default/objects/Animais__c/listViews/PorteGrande.listView-meta.xml
<ListView>
    <fullName>PorteGrande</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Categoria__c</field>
        <operation>equals</operation>
        <value>Porte grande</value>
    </filters>
    <label>Porte grande</label>
</ListView>