ProcessoDELL/force-app/main/default/objects/Animais__c/listViews/PorteMedio.listView-meta.xml
<ListView>
    <fullName>PorteMedio</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Categoria__c</field>
        <operation>equals</operation>
        <value>Porte médio</value>
    </filters>
    <label>Porte médio</label>
</ListView>