ProcessoDELL/force-app/main/default/objects/Animais__c/listViews/PortePequeno.listView-meta.xml
<ListView>
    <fullName>PortePequeno</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Categoria__c</field>
        <operation>equals</operation>
        <value>Porte pequeno</value>
    </filters>
    <label>Porte pequeno</label>
</ListView>